[tool.poetry]
name = "mailboxdelegate"
version = "0.1.0"
description = "Mailbox delegation script for Yandex 360"
authors = ["Anton Bugrin <abugrin@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
certifi ="^2024.2.2"
charset-normalizer = "^3.3.2"
idna = "^3.6"
requests = "^2.31.0"
urllib3 = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
